...
            paymentMethodHeaderLabel,
            paymentMethodStackView
        ])
        cartStackView.axis = .vertical
        cartStackView.spacing = 10

        dropInButton.setTitle(NSLocalizedString("Add Payment Method", comment: ""), for: .normal)
        dropInButton.setTitleColor(tintColor, for: .normal)

        purchaseButton.setTitle(NSLocalizedString("Complete Purchase", comment: ""), for: .normal)
        purchaseButton.setTitleColor(UIColor.white, for: .normal)
        purchaseButton.setTitleColor(UIColor.white.withAlphaComponent(0.8), for: .highlighted)
        purchaseButton.backgroundColor = tintColor
...
