...
"CARD_TYPE_VISA"                            = "Visa";
"CARD_TYPE_JCB"                             = "JCB";
"CARD_TYPE_MAESTRO"                         = "Maestro";
"CARD_TYPE_UNION_PAY"                       = "UnionPay";
"CARD_TYPE_HIPER"                           = "Hiper";
"CARD_TYPE_HIPERCARD"                       = "Hipercard";
"BRANDING_VENMO"                            = "Venmo";
"BRANDING_APPLE_PAY"                        = "Apple Pay";
"BRANDING_ANDROID_PAY"                      = "Android Pay‏";
"USE_DIFFERENT_PHONE_NUMBER_ACTION"         = "Use a different phone number";
"CARD_NOT_ACCEPTED_ERROR_LABEL"             = "Card not accepted";

